# QATCH

./: .gitignore  01_generate_tests.py  02_predicts_tests.py  03_evaluate_tests.py  404.html  LICENSE  QA_SPIDER.py  QA_proprietary_data.py  README.md  SP_RESDSQL.py  credentials.json  index.html  main_proprietary_data.py  main_reproducibility.py  main_spider_data.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  spider_reader_reproducibility.py  utils.py  utils_preprocess_data.py
DELETE/: SP_proprietary_data.py
base_connectors/: index.html
damber/: README.md  __init__.py  evaluate_ambiguous_predictions.py  generate_ambiguous_test.py  inject_ambiguity.py
damber/data/: ambiguity_annotation_task_1.xlsx  ambiguity_annotation_task_3.xlsx  ambiguous_tables.xlsx
docs/: base_connectors.md  database_reader.md  evaluator_orchestrator.md  generator_orchestrator.md  getting_started.md  index.md  metrics.md  sql_generator.md  sqlite_connector.md  supported_metrics.md  template_generator.md
evaluator_orchestrator/: index.html
generator_orchestrator/: index.html
getting_started/: index.html
qatch/: __init__.py  metric_evaluator.py  test_generator.py
qatch/connectors/: base_connector.py  sqlite_connector.py  utils.py
qatch/database_reader/: __init__.py  multiple_databases.py  single_database.py
qatch/evaluate_dataset/: __init__.py  orchestrator_evaluator.py  state_orchestrator_evaluator.py
qatch/generate_dataset/: __init__.py  orchestrator_generator.py  state_orchestrator_generator.py
qatch/metrics/: __init__.py  abstract_metric.py  cell_precision_tag.py  cell_recall_tag.py  tuple_cardinality_tag.py  tuple_constraint_tag.py  tuple_order_tag.py
qatch/models/: __init__.py  abstract_model.py  omnitab.py  tapas.py  tapex.py  utils.py
qatch/sql_generator/: __init__.py  abstract_sql_generator.py  distinct_generator.py  groupby_generator.py  having_generator.py  join_generator.py  null_generator.py  null_generators.py  orderby_generator.py  select_generator.py  simple_agg_generator.py  where_generator.py
qatch_v_2/: orchestrator.py  state_orchestrator.py
qatch_v_2/checklist_generators/: __init__.py  base_generator.py  distinct_generator.py  groupby_generator.py  having_generator.py  join_generator.py  null_generator.py  orderby_generator.py  project_generator.py  select_generator.py  simple_agg_generator.py
qatch_v_2/connectors/: __init__.py  connector.py  sqlite_connector.py  utils.py
qatch_v_2/evaluate_dataset/: orchestrator_evaluator.py  state_orchestrator_evaluator.py
qatch_v_2/generate_dataset/: orchestrator_generator.py  state_orchestrator_generator.py
runners/: __init__.py  abstract_runner.py  runner_proprietary.py  runner_spider_template.py  utils.py
search/: search_index.json
sqlite_connector/: index.html
src/: __init__.py
src/metrics/: __init__.py  abstract_metric.py  cell_precision_tag.py  cell_recall_tag.py  metric_evaluator.py  row_cardinality_tag.py  tuple_cardinality_tag.py  tuple_constraint_tag.py  tuple_order_tag.py
src/models/: __init__.py  abstract_model.py  chatgpt.py  llama2.py  omnitab.py  tapas.py  tapex.py
src/test_generator/: __init__.py  abstract_test_generator.py  test_generator.py  test_generator_spider.py
supported_metrics/: index.html
template_generator/: index.html
tests/: test_abstract_metric.py  test_metric_evaluator.py  test_metrics.py  test_single_database.py  test_sql_generators.py  test_test_generator.py
tests/test_database_reader/: test_multiple_databases.py  test_single_database.py
(+105 files in other folders)
