[tool.poetry]
name = "qatch"
version = "0.2.2"
description = ""
license = "apache-2.0"
authors = ["spapicchio <simone.papicchio@polito.it>"]
readme = "README.md"
packages = [
    { include = "qatch" },
]

# These packages are mandatory and form the core of this package’s distribution.
[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
pandas = "^2"
chardet = ">=3.0.2"
tqdm = "^4.66.1"

# A list of all of the optional dependencies to run prediction with QATCH
accelerate = { version = ">=0.21.1", optional = true }
#torch = { version = ">=2.0.0, !=2.0.1, !=2.1.0", optional = true }
torch = { version = "^2.0.0, !=2.0.1, !=2.1.0", extras = ['model'] }
openai = "1.14.2"
transformers = { version = "^4.29.0", optional = true, extras = ["model"] }
tiktoken = { version = "^0.5.1", optional = true, extras = ["model"] }
openpyxl = "^3.1.2"
pytest = "^8.0.1"
pyarrow = "^15.0.0"

[tool.poetry.extras]
model = ["accelerate", "torch", "openai", "transformers", "tiktoken"]
# TEST group
[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "*"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
